--- a/backend/MyFood-BE/MyFood-BE/appsettings.json
+++ b/backend/MyFood-BE/MyFood-BE/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqlServer": "Server=DESKTOP-PRGFMF7\\SQLEXPRESS;Database=MyFood;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +9,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtConfig": {
+    "ValidIssuer": "myfood.com",
+    "ValidAudience": "myfood.com",
+    "SecretKey": "axsamksxASLALAaklsdak(O)smdas(R)dasda(B)d23a1(I)sda5(S)s89das51as5x61asx7a1sc4asdsa;f;;'.dqw,q;qdq[1]'asdasda[]asdaasaasasdaxals;xas4616axs8aq87ewq1dasd*d/*/*a/*da/sda/s*d/s*ad*sa/d*/d"
+  }
 }
