--- a/backend/MyFood-BE/MyFood-BE/appsettings.json
+++ b/backend/MyFood-BE/MyFood-BE/appsettings.json
@@ -14,5 +14,14 @@
     "ValidIssuer": "myfood.com",
     "ValidAudience": "myfood.com",
     "SecretKey": "axsamksxASLALAaklsdak(O)smdas(R)dasda(B)d23a1(I)sda5(S)s89das51as5x61asx7a1sc4asdsa;f;;'.dqw,q;qdq[1]'asdasda[]asdaasaasasdaxals;xas4616axs8aq87ewq1dasd*d/*/*a/*da/sda/s*d/s*ad*sa/d*/d"
+  },
+  "SwaggerConfig": {
+    "IsDev": true,
+    "RouteDev": "/api-docs/v1/swagger.json",
+    "RouteProd": "",
+    "Version": "v1",
+    "Title": "My Food Api",
+    "Prefix": "Documentation",
+    "RouteTemplate": "api-docs/{documentName}/swagger.json"
   }
 }
