--- a/backend/MyFood-BE/DataBaseLayer/DataBaseLayer.csproj
+++ b/backend/MyFood-BE/DataBaseLayer/DataBaseLayer.csproj
@@ -5,6 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20200511003318_AddingAllModels.cs" />
+    <Compile Remove="Migrations\20200511003318_AddingAllModels.Designer.cs" />
+    <Compile Remove="Migrations\20200511003416_AddingAllModels.cs" />
+    <Compile Remove="Migrations\20200511003416_AddingAllModels.Designer.cs" />
+    <Compile Remove="Migrations\20200511004035_AddingAllModels.cs" />
+    <Compile Remove="Migrations\20200511004035_AddingAllModels.Designer.cs" />
+    <Compile Remove="Migrations\20200511005032_AddingAllModels.cs" />
+    <Compile Remove="Migrations\20200511005032_AddingAllModels.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
@@ -12,6 +24,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Commons\Commons.csproj" />
   </ItemGroup>
 
 </Project>
