adding module of restaurant 🍔🍕

--- a/backend/MyFood-BE/MyFood-BE/appsettings.json
+++ b/backend/MyFood-BE/MyFood-BE/appsettings.json
@@ -23,5 +23,13 @@
     "Title": "My Food Api",
     "Prefix": "Documentation",
     "RouteTemplate": "api-docs/{documentName}/swagger.json"
+  },
+  "RestaurantConfig": {
+    "Title": "Mi Restaurante",
+    "Address": "Dirrección",
+    "Longitude": 0,
+    "Latitude": 0,
+    "Description": "El mejor restaurante!",
+    "PhoneNumber": "000-000-0000"
   }
 }
